# distributeddatamgr_data_share

./: .gitignore  AGENTS.md  CODEOWNERS  OAT.xml  README_zh.md  bundle.json  cfi_blocklist.txt  datashare.gni
common/ani_rs/: BUILD.gn  Cargo.toml
common/ani_rs/include/: ani_rs_bind.h
common/ani_rs/src/: ani_rs_bind.cpp  box_type.rs  business_error.rs  env.rs  error.rs  global.rs  iterator.rs  lib.rs  log.rs  macros.rs  primitive.rs  signature.rs  typed_array.rs  vm.rs  wrapper.rs
common/ani_rs/src/ani/: de.rs  error_msg.rs  mod.rs  ser.rs
common/ani_rs/src/objects/: ani_enum.rs  ani_ref.rs  ani_string.rs  ani_type.rs  array.rs  class.rs  enum_item.rs  fn_object.rs  function.rs  json.rs  method.rs  mod.rs  module.rs  namespace.rs  object.rs
common/ani_rs_macros/: BUILD.gn  Cargo.toml
common/ani_rs_macros/src/: lib.rs  native.rs
common/ani_sys/: BUILD.gn  Cargo.toml
common/ani_sys/src/: lib.rs
docs/skills/: SKILL.md  (+1 more)
frameworks/cj/ffi/data_share_predicates/: BUILD.gn
frameworks/cj/ffi/data_share_predicates/include/: data_share_predicates_ffi.h  data_share_predicates_impl.h  data_share_predicates_utils.h
frameworks/cj/ffi/data_share_predicates/src/: data_share_predicates_ffi.cpp  data_share_predicates_impl.cpp  data_share_predicates_utils.cpp
frameworks/ets/ani/: BUILD.gn  Cargo.toml
frameworks/ets/ani/ets/: @ohos.application.DataShareExtensionAbility.d.ets  @ohos.application.DataShareExtensionAbility.ets  @ohos.data.DataShareResultSet.ets  @ohos.data.dataShare.d.ets  @ohos.data.dataShare.ets  @ohos.data.dataSharePredicates.d.ets  @ohos.data.dataSharePredicates.ets
frameworks/ets/ani/include/: ani_callbacks_manager.h  ani_inner_observer.h  ani_observer.h  ani_subscriber.h  ani_subscriber_manager.h  datashare_ani.h
frameworks/ets/ani/src/: datashare.rs  datashare_extension.rs  lib.rs  log.rs  predicates.rs  result_set.rs  wrapper.rs
frameworks/ets/ani/src/cxx/: ani_inner_observer.cpp  ani_observer.cpp  ani_subscriber.cpp  ani_subscriber_manager.cpp  dataproxy_handle_ani.cpp  datashare_ani.cpp
frameworks/ets/ani/src/wrapper/: batch_update.rs  change_info.rs  published_data_change_node.rs  published_item.rs  rdb_data_change_node.rs  template.rs  value_type.rs  values_bucket.rs
frameworks/js/ani/: BUILD.gn  arktsconfig.json
frameworks/js/ani/common/include/: ani_util_class.h  ani_util_common.h  ani_util_native_ptr.h  ani_utils.h  datashare_predicates_cleaner.h
frameworks/js/ani/common/src/: ani_utils.cpp
frameworks/js/ani/dataShare/: BUILD.gn
frameworks/js/ani/dataShare/ets/: @ohos.data.dataShare.ets  @ohos.data.dataSharePredicates.ets
frameworks/js/ani/dataShare/include/: ani_datashare_helper.h  ani_datashare_inner_observer.h  ani_datashare_observer.h  ani_utils.h
frameworks/js/ani/dataShare/src/: ani_datashare_helper.cpp  ani_datashare_inner_observer.cpp  ani_datashare_observer.cpp  data_share_predicates.cpp
frameworks/js/ani/dataShareResultSet/: BUILD.gn
frameworks/js/ani/ets/: @ohos.data.ValuesBucket.ets  @ohos.data.dataSharePredicates.d.ets  data_share_predicates.ets
frameworks/js/ani/include/: ani_utils.h
frameworks/js/ani/src/: data_share_predicates.cpp
frameworks/js/ani/test/: test.ets
frameworks/js/napi/dataShare/: BUILD.gn  libdatashare_jscommon.map
frameworks/rust/datashare_ffi/: Cargo.toml  libdatashare_ffi.map
frameworks/rust/datashare_ffi/src/: lib.rs
frameworks/rust/datashare_resultset_rust/: Cargo.toml
frameworks/rust/datashare_resultset_rust/src/: block_writer.rs  kvstore_proxy.rs  lib.rs  result_set.rs  result_set_bridge.rs  shared_block.rs
frameworks/rust/ffi/ffi_account/: BUILD.gn  Cargo.toml
frameworks/rust/ffi/ffi_ds_bundlemgr/: BUILD.gn  Cargo.toml
frameworks/rust/ffi/ffi_hitrace/: BUILD.gn  Cargo.toml
frameworks/rust/ffi/ffi_ipc_raw_data/: BUILD.gn  Cargo.toml
frameworks/rust/ffi/ffi_kvstore/: BUILD.gn  Cargo.toml
interfaces/inner_api/: BUILD.gn
interfaces/inner_api/common/: BUILD.gn  libdatashare_common.map
interfaces/inner_api/common/include/: dataproxy_handle_common.h  datashare_abs_predicates.h  datashare_errno.h  datashare_observer.h  datashare_operation_statement.h  datashare_option.h  datashare_predicates.h  datashare_predicates_def.h  datashare_predicates_object.h  datashare_predicates_objects.h  datashare_template.h  datashare_type.h  datashare_value_object.h  datashare_values_bucket.h
interfaces/inner_api/consumer/: libdatashare_consumer.map
interfaces/inner_api/consumer/include/: dataproxy_handle.h  datashare_abs_result_set.h  datashare_block_writer_impl.h  datashare_business_error.h  datashare_helper.h  datashare_result_set.h  datashare_shared_result_set.h
interfaces/inner_api/permission/: libdatashare_permission.map
interfaces/inner_api/permission/include/: data_share_permission.h
interfaces/inner_api/provider/: libdatashare_provider.map
interfaces/inner_api/provider/include/: result_set_bridge.h
test/fuzztest/datasharestub_fuzzer/: BUILD.gn  datasharestub_fuzzer.cpp  datasharestub_fuzzer.h
test/native/: BUILD.gn
test/native/resource/datashare_ext_bundle/: BUILD.gn  build-profile.json5  code-linter.json5  oh-package.json5
test/native/resource/datashareproxy_bundle/: BUILD.gn  build-profile.json5  oh-package.json5
test/native/resource/errorcode_ext_bundle/: BUILD.gn  hvigorfile.ts  oh-package.json5
test/native/resource/ohos_test/: BUILD.gn  ohos_test.xml
test/native/resource/ohos_test_new/: BUILD.gn
test/native/unittest/dataproxy_handle_test/: dataproxy_handle_test.cpp
test/native/unittest/datashare_access_threshold_test/: datashare_threshold_test.cpp
test/native/unittest/datashare_common_test/: datashare_itypes_utils_test.cpp
test/native/unittest/datashareproxy_test/: proxydatas_with_permission_test.cpp
test/native/unittest/mock/: ikvstore_data_service_mock.h
test/unittest/native/: BUILD.gn
test/unittest/native/common/: BUILD.gn
test/unittest/native/consumer/: BUILD.gn  datashare_helper_join_test.cpp
test/unittest/native/permission/: BUILD.gn
test/unittest/native/provider/: BUILD.gn
test/unittest/native/proxy/: BUILD.gn
(+715 files in other folders)
