# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

datashare_base_path = "//foundation/distributeddatamgr/data_share"

datashare_common_native_path = "${datashare_base_path}/frameworks/native/common"

datashare_common_napi_path = "${datashare_base_path}/frameworks/js/napi/common"

datashare_napi_path = "${datashare_base_path}/frameworks/js/napi"

datashare_cj_ffi_path = "${datashare_base_path}/frameworks/cj/ffi"

datashare_innerapi_path = "${datashare_base_path}/interfaces/inner_api"

datashare_native_provider_path =
    "${datashare_base_path}/frameworks/native/provider"

datashare_native_consumer_path =
    "${datashare_base_path}/frameworks/native/consumer"

datashare_native_permission_path =
    "${datashare_base_path}/frameworks/native/permission"

datashare_native_proxy_path = "${datashare_base_path}/frameworks/native/proxy"

foundation_path = "//foundation"

access_token_path = "//base/security/access_token"

base_hiviewdfx_hilog_path = "//base/hiviewdfx/hilog"

commonlibrary_cutils_path = "//commonlibrary/c_utils"

utils_system_safwk_path = "//utils/system/safwk"

thirdparty_json_path = "//third_party/json"
