# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("//foundation/distributeddatamgr/data_share/datashare.gni")

rust_cxx("ani_rs_cxx") {
  sources = [ "src/wrapper.rs" ]
}

ohos_static_library("ani_rs_static") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  include_dirs = [
    "include",
    "${target_gen_dir}/src",
  ]

  sources = [ "src/ani_rs_bind.cpp" ]
  sources += get_target_outputs(":ani_rs_cxx")

  deps = [ ":ani_rs_cxx" ]

  external_deps = [
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "runtime_core:ani",
    "rust_cxx:cxx_cppdeps",
  ]

  part_name = "data_share"
  subsystem_name = "distributeddatamgr"
}

ohos_rust_static_library("ani_rs") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    boundary_sanitize = true
    all_ubsan = true
    debug = false
  }

  sources = [ "src/lib.rs" ]
  deps = [
    ":ani_rs_static",
    "../ani_rs_macros:ani_rs_macros(${host_toolchain})",
    "../ani_sys:ani_sys",
    "//third_party/rust/crates/serde/serde:lib",
  ]

  external_deps = [
    "hilog:hilog_rust",
    "runtime_core:ani",
    "rust_cxx:lib",
    "ylong_runtime:ylong_runtime",
  ]

  clippy_lints = "none"
  part_name = "data_share"
  subsystem_name = "distributeddatamgr"
}
