# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("//foundation/distributeddatamgr/data_share/datashare.gni")

rust_bindgen("ani_bindgen_h") {
  header =
      "//arkcompiler/runtime_core/static_core/plugins/ets/runtime/ani/ani.h"
}

ohos_rust_static_library("ani_sys") {
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    boundary_sanitize = true
    all_ubsan = true
    debug = false
  }
  deps = [ ":ani_bindgen_h" ]
  sources = [ "src/lib.rs" ]
  external_deps = [ "runtime_core:ani" ]

  bindgen_output = get_target_outputs(":ani_bindgen_h")
  inputs = bindgen_output
  rustenv = [ "ANI_BINDGEN_RS_FILE=" + rebase_path(bindgen_output[0]) ]

  clippy_lints = "none"
  part_name = "data_share"
  subsystem_name = "distributeddatamgr"
}
